feat: CRM模块